--- a/modulo1ejemplos/js-examples/styles.css
+++ b/modulo1ejemplos/js-examples/styles.css
@@ -94,6 +94,10 @@ nav a:hover {
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
+.error {
+    background: #a8afee;
+}
+
 #perroResult {
     background: #fff;
     padding: 20px;
